Feat: [IDP-237]: IDP Software Catalog - Refactoring and Review comments (#45068)
* Feat: [IDP-237]: IDP Software Catalog - Refactoring and Review comment changes. PR description will have more detailed summary.

* Manual change after latest merge from develop

* Update git leaks ignore for commit 926856c2011c9e41e66dd85ca686d324efa9e960 which has generic api keys

* Ugh. Update gitleaks ignore as per the 1st commit in the PR.

* Code format failure in build.bazel file for extra new line.

* SonarQube analysis fixes in PR

* Code format failure.

* Migrate get all service api from CDLicenseUsageResource to ServiceResourceV2.

* Code format failure.

* Remove deleted file

* Code format failure.